--- a/requirements.txt
+++ b/requirements.txt
@@ -17,14 +17,15 @@ shap>=0.42.0
 
 # API & Deployment
 fastapi>=0.100.0
-uvicorn>=0.23.0
+uvicorn[standard]>=0.23.0
 streamlit>=1.25.0
-gradio>=3.40.0
+pydantic>=2.0.0
 
 # Utilities
 python-dotenv>=1.0.0
 pyyaml>=6.0
 tqdm>=4.65.0
+joblib>=1.3.0
 
 # Kaggle API
 kaggle>=1.5.15
