Include dataset CSVs and update documentation
Added online_gaming_behavior_dataset.csv and train.csv to data/raw/. Updated .gitignore to allow tracked CSVs in data/raw/. README updated to clarify dataset setup and removed Kaggle API utility and download_dataset.py reference. Deleted src/download_dataset.py as dataset is now included in the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,13 @@ ENV/
 *.ipynb_checkpoints
 
 # Data
+# Note: Small dataset files (~2.7MB) are included in the repo for convenience
+# First ignore everything in data/raw/
 data/raw/*
+# Then include .gitkeep and CSV files
 !data/raw/.gitkeep
+!data/raw/*.csv
+
 data/processed/*
 !data/processed/.gitkeep
 
